fixed missing environment variables for production setup; added .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
-# Database Credentials
-POSTGRES_USER=cook_admin
-POSTGRES_PASSWORD=choose_a_strong_password
-POSTGRES_DB=cookbook_db
+# Database
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=cookbook
+DATABASE_URL=postgresql://user:password@db:5432/cookbook
+
+# FastAPI
+CORS_ORIGINS=http://localhost:5173
+
+# Frontend
+VITE_API_URL=http://localhost:8000
+VITE_API_TARGET=http://backend:8000
